# voxpen-desktop

./: .gitignore  CLAUDE.md  README.md  README.zh-TW.md  index.html  package.json  plan.md  pnpm-lock.yaml  tsconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md  RELEASE.md  ROADMAP.md  voice-commands.md
docs/plans/: 2026-02-24-android-pattern-mapping-design.md  2026-02-24-phase1.6-tauri-integration.md  2026-02-24-phase2-4-implementation.md  2026-02-24-phase5-distribution.md  2026-02-24-v1-completion.md  2026-02-25-custom-vocabulary.md  2026-02-25-hotkey-config-design.md  2026-02-25-hotkey-config-plan.md  2026-02-25-windows-robustness.md  2026-02-26-lemonsqueezy-licensing-design.md  2026-02-26-lemonsqueezy-licensing-plan.md  2026-02-26-local-whisper-design.md  2026-02-26-local-whisper-plan.md  2026-02-26-model-selection-plan.md  2026-02-26-tone-presets-design.md  2026-02-26-tone-presets-plan.md  2026-02-28-recording-time-limit.md  2026-02-28-translation-mode.md  2026-02-28-voice-commands.md  2026-03-01-auto-tone.md  2026-03-01-voice-edit.md  2026-03-02-promo-code-expiration-design.md  2026-03-02-promo-code-expiration-plan.md  2026-03-06-large-file-chunked-transcription.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/crates/voxink-core/: Cargo.toml
src-tauri/crates/voxink-core/src/: error.rs  history.rs  lib.rs
src-tauri/crates/voxink-core/src/api/: groq.rs  mod.rs
src-tauri/crates/voxink-core/src/audio/: recorder.rs
src-tauri/crates/voxink-core/src/input/: clipboard.rs  mod.rs  paste.rs
src-tauri/crates/voxink-core/src/licensing/: lemonsqueezy.rs  manager.rs  verifier.rs
src-tauri/crates/voxink-core/src/pipeline/: controller.rs  mod.rs  prompts.rs  refine.rs  settings.rs  state.rs  transcribe.rs  vocabulary.rs
src-tauri/crates/voxink-core/src/whisper/: download.rs  models.rs  provider.rs
src-tauri/crates/voxpen-core/: Cargo.toml
src-tauri/crates/voxpen-core/src/: dictionary.rs  error.rs  lib.rs  srt.rs
src-tauri/crates/voxpen-core/src/api/: groq.rs
src-tauri/crates/voxpen-core/src/audio/: chunker.rs  encoder.rs  mod.rs  recorder.rs
src-tauri/crates/voxpen-core/src/input/: clipboard.rs  mod.rs  paste.rs
src-tauri/crates/voxpen-core/src/licensing/: lemonsqueezy.rs  manager.rs  mod.rs  types.rs  usage.rs
src-tauri/crates/voxpen-core/src/pipeline/: chunked_transcribe.rs  controller.rs  mod.rs  prompts.rs  refine.rs  settings.rs  state.rs  transcribe.rs  vocabulary.rs  voice_commands.rs
src-tauri/crates/voxpen-core/src/whisper/: download.rs  mod.rs  provider.rs
src-tauri/icons/: icon.icns
src-tauri/src/: active_window.rs  audio.rs  clipboard.rs  commands.rs  dictionary.rs  history.rs  hotkey.rs  keyboard.rs  lib.rs  licensing.rs  main.rs  state.rs
src/components/: Overlay.tsx  UpdateChecker.tsx
src/components/History/: HistoryEntry.tsx  HistoryList.tsx  HistoryWindow.tsx
src/components/Settings/: AppearanceSection.tsx  DictionarySection.tsx  FileTranscriptionSection.tsx  GeneralSection.tsx  LicenseSection.tsx  RefinementSection.tsx  SettingsWindow.tsx  SttSection.tsx  VocabularySection.tsx
src/hooks/: useSettings.ts  useTheme.ts
src/lib/: i18n.ts  tauri.ts
src/locales/: en.json  zh-TW.json
src/types/: dictionary.ts  history.ts  settings.ts
