[workspace]
members = [".", "crates/voxpen-core"]

[package]
name = "voxpen-desktop"
version = "0.9.1"
description = "System-tray voice dictation for every desktop app"
authors = ["VoxPen"]
edition = "2021"

[lib]
name = "voxpen_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
voxpen-core = { path = "crates/voxpen-core", default-features = false }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"
arboard = "3"
enigo = "0.2"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rdev = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
open = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
local-whisper = ["voxpen-core/local-whisper"]

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
