[package]
name = "voxpen-core"
version = "0.2.1"
edition = "2021"
description = "VoxPen core business logic — STT pipeline, audio encoding, LLM refinement"

[features]
default = ["local-whisper"]
local-whisper = ["dep:whisper-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls", "stream"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
whisper-rs = { version = "0.13", optional = true }

[dev-dependencies]
mockall = "0.13"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
